--- a/example_player/Cargo.toml
+++ b/example_player/Cargo.toml
@@ -12,4 +12,5 @@ debug = 1
 cpal = "0.14.0"
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
-rusty_sample_player = { path = "../" }
+midi_player = { git = "https://github.com/bombpersons/midi_player.git" }
+sample_synth = { path = "../" }
