--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sample_synth"
+name = "midi_synth"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,9 +11,8 @@ debug = 1
 [dependencies]
 midi_player = { git = "https://github.com/bombpersons/midi_player.git" }
 midly = "0.5.2"
-wav = "1.0.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-rubato = "0.12.0"
 tracing = "0.1.35"
 tracing-subscriber = "0.3.15"
+fundsp = "0.9.0"
