--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ debug = 1
 midi_player = { git = "https://github.com/bombpersons/midi_player.git" }
 midly = "0.5.2"
 wav = "1.0.0"
+fundsp = "0.9.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 rubato = "0.12.0"
